RESOLVED FIXED136912
Fix !ENABLE(INSPECTOR) build
https://bugs.webkit.org/show_bug.cgi?id=136912
Summary Fix !ENABLE(INSPECTOR) build
Éva Balázsfalvi
Reported 2014-09-18 01:22:27 PDT
Tools/Scripts/build-webkit --efl --no-inspector build script fails.
Attachments
Patch (2.63 KB, patch)
2014-09-18 01:26 PDT, Éva Balázsfalvi
no flags
Éva Balázsfalvi
Comment 1 2014-09-18 01:26:09 PDT
WebKit Commit Bot
Comment 2 2014-09-18 09:23:01 PDT
Comment on attachment 238295 [details] Patch Clearing flags on attachment: 238295 Committed r173721: <http://trac.webkit.org/changeset/173721>
WebKit Commit Bot
Comment 3 2014-09-18 09:23:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.