Fix "Tools/Scripts/build-webkit --efl --no-inspector" build https://bugs.webkit.org/show_bug.cgi?id=136912

Reviewed by Darin Adler.

* runtime/TypeSet.cpp:
(JSC::TypeSet::leastCommonAncestor):


Canonical link: https://commits.webkit.org/154737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173721 268f45cc-cd09-0410-ab3c-d52691b4dbfc